{
    "name": "Controller",
    "maps": [
        {
            "name": "Fucking_Controller",
            "id": "be07f211-55c9-4ef9-813a-e5baf82f7d5e",
            "actions": [
                {
                    "name": "Movement_Waiter",
                    "type": "Value",
                    "id": "7f449d04-2f00-4226-902d-1541470315dd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Movement_FuckingRat",
                    "type": "Value",
                    "id": "f41ea76e-51ea-4be7-a416-bef0c6a5d7dd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7118e147-1b7a-4969-aebd-beb50adf514c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_FuckingRat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32ab3571-237d-4ca7-b838-1eb8d56b8dbe",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Movement_Waiter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}